package service

import (
	"context"
	"fmt"
	"time"

	"github.com/redis/go-redis/v9"
	"github.com/shopspring/decimal"
	"go.uber.org/zap"
	"google.golang.org/grpc/codes"
	"gopherex.com/internal/wallet/domain"
	"gopherex.com/internal/wallet/repo"
	"gopherex.com/pkg/logger"
	"gopherex.com/pkg/xerr"
	"gorm.io/gorm"
)

type WithdrawService struct {
	repo        *repo.Repo // ä½¿ç”¨ Day 16 ä¼˜åŒ–çš„èšåˆæ¥å£
	redisClinet *redis.Client
}

func NewWithdrawService(db *gorm.DB, redisClient *redis.Client) *WithdrawService {
	repoDb := repo.New(db)
	return &WithdrawService{repo: repoDb, redisClinet: redisClient}
}

// ApplyWithdraw ç”³è¯·æç°
func (s *WithdrawService) ApplyWithdraw(ctx context.Context, uid int64, chain, symbol, toAddress string, amount decimal.Decimal, requestId string) error {
	logger.Info(ctx, "å¼€å§‹ç”³è¯·æç°",
		zap.Int64("uid", uid),
		zap.String("symbol", symbol),
		zap.String("amount", amount.String()))
	// === ç¬¬ä¸€å±‚ï¼šRedis è½¯é˜²é‡ (ä¸ºäº†æ€§èƒ½) ===
	// Key æ ¼å¼: "idempotent:withdraw:{request_id}"
	cacheKey := fmt.Sprintf("idempotent:withdraw:%s", requestId)
	// ä½¿ç”¨ SetNX (Set if Not Exists)
	// è¿‡æœŸæ—¶é—´è®¾ä¸º 24å°æ—¶ (è¶³å¤Ÿè¦†ç›–ç½‘ç»œé‡è¯•å‘¨æœŸ)
	isNew, err := s.redisClinet.SetNX(ctx, cacheKey, "processing", 24*time.Hour).Result()
	if err != nil {
		return xerr.New(codes.Internal, "ç³»ç»Ÿç¹å¿™") // Redis æŠ¥é”™ï¼Œä¸ºäº†å®‰å…¨å¯ä»¥é€‰æ‹©é™çº§æˆ–æŠ¥é”™
	}
	if !isNew {
		// Redis é‡Œå·²ç»æœ‰äº†ï¼Œç›´æ¥æ‹¦æˆªï¼Œä¸èµ°æ•°æ®åº“
		return xerr.New(codes.AlreadyExists, "é‡å¤çš„è¯·æ±‚ï¼Œè¯·ç¨åæŸ¥è¯¢ç»“æœ")
	}

	// TODO: 1. è®¡ç®—æ‰‹ç»­è´¹ (Fee)
	// æš‚æ—¶ hardcode
	fee := decimal.RequireFromString("0.0001") // å‡è®¾æ‰‹ç»­è´¹ 0.0001

	// 2. å¼€å¯äº‹åŠ¡
	err = s.repo.Transaction(ctx, func(txCtx context.Context) error {
		// A. æŸ¥è¯¢ä½™é¢å¹¶è·å–ç‰ˆæœ¬å· (ä¸ºäº†ä¹è§‚é”)
		// æ³¨æ„ï¼šGetBalance ä¹Ÿéœ€è¦ç”¨ txCtx æŸ¥ (å¦‚æœ Repo æ²¡å®ç°ï¼Œéœ€è¦è¡¥å……)
		// å‡è®¾ AssetRepo é‡Œçš„ GetBalance ä¼šè‡ªåŠ¨ä½¿ç”¨ txCtx
		asset, err := s.repo.GetBalance(txCtx, uid, symbol)
		if err != nil {
			return err
		}

		// B. æ£€æŸ¥ä½™é¢
		totalCost := amount.Add(fee)
		if asset.Available.LessThan(totalCost) {
			return xerr.New(codes.InvalidArgument, "å¯ç”¨ä½™é¢ä¸è¶³")
		}

		// C. å†»ç»“ä½™é¢ (æ ¸å¿ƒæ­¥éª¤)
		if err := s.repo.FreezeBalance(txCtx, asset, totalCost); err != nil {
			// è¿™é‡Œä¼šæ•è·ä¹è§‚é”å†²çª
			return err
		}

		// D. åˆ›å»ºæç°è®¢å•
		order := &domain.Withdraw{
			UserID:    uid,
			Chain:     chain,
			Symbol:    symbol,
			Amount:    amount,
			Fee:       fee,
			ToAddress: toAddress,
			RequestID: requestId,
			Status:    domain.WithdrawStatusAudited, // åˆå§‹çŠ¶æ€ï¼šç”³è¯·ä¸­
		}
		if err := s.repo.CreateWithdrawOrder(txCtx, order); err != nil {
			return err
		}

		return nil
	})
	if err != nil {
		s.redisClinet.Del(ctx, cacheKey)
	}
	return nil

}

// PickAndLockPendingWithdraws æŠ¢å•
func (s *WithdrawService) PickAndLockPendingWithdraws(ctx context.Context, chain string, batchSize int) ([]domain.Withdraw, error) {
	var orders []domain.Withdraw

	// ğŸ”¥ å¼€å¯äº‹åŠ¡
	err := s.repo.Transaction(ctx, func(txCtx context.Context) error {
		// 1. æŠ¢é”
		var err error
		orders, err = s.GetListForStatus(txCtx, chain, domain.WithdrawStatusAudited, batchSize)
		if err != nil {
			return err
		}
		if len(orders) == 0 {
			return nil
		}

		// 2. æ”¶é›† ID
		var ids []int64
		for _, o := range orders {
			ids = append(ids, o.ID)
		}

		// 3. æ ‡è®°ä¸ºå¤„ç†ä¸­ (é˜²æ­¢è¢«å…¶ä»–äººæŠ¢)
		if err := s.repo.UpdateWithdrawStatusBatch(txCtx, ids, domain.WithdrawStatusProcessing); err != nil {
			return err
		}

		return nil
	})

	if err != nil {
		return nil, err
	}
	return orders, nil
}

func (s *WithdrawService) GetListForStatus(ctx context.Context, chain string, status domain.WithdrawStatus, batchSize int) ([]domain.Withdraw, error) {
	return s.repo.FindPendingWithdrawsForUpdate(ctx, chain, status, batchSize)
}

// MarkWithdrawBroadcasted æ ‡è®°å¹¿æ’­æˆåŠŸ (ä¾ç„¶æ˜¯ Processingï¼Œä½†æœ‰äº† Hash)
func (s *WithdrawService) MarkWithdrawBroadcasted(ctx context.Context, id int64, txHash string, status domain.WithdrawStatus, ErrorMsg string) error {
	// çŠ¶æ€ä¿æŒ Processingï¼Œç­‰å¾… Scanner ç¡®è®¤ä¸º Confirmed
	return s.repo.UpdateWithdrawResult(ctx, id, txHash, status, "")
}

// MarkWithdrawFailed æ ‡è®°å¤±è´¥
func (s *WithdrawService) MarkWithdrawFailed(ctx context.Context, id int64, errMsg string) error {
	// TODO: è¿™é‡Œæœªæ¥å¯èƒ½éœ€è¦å…³è”â€œè§£å†»èµ„äº§â€çš„æ“ä½œï¼Œæ‰€ä»¥æ”¾åœ¨ Service å±‚éå¸¸åˆé€‚
	logger.Error(ctx, "æç°å¤±è´¥æ ‡è®°", zap.Int64("id", id), zap.String("err", errMsg))
	return s.repo.UpdateWithdrawResult(ctx, id, "", domain.WithdrawStatusFailed, errMsg)
}
